don't hide toolbar overflow for dialogs, fixes #3212
Closes #3212

Merge request studip/studip!2264

--- a/resources/assets/stylesheets/scss/studip-cke-ui.scss
+++ b/resources/assets/stylesheets/scss/studip-cke-ui.scss
@@ -399,7 +399,6 @@ form.default .ck-source-editing-area textarea {
 
 .studip-dialog {
     .ck-editor {
-        overflow: hidden;
         .ck.ck-editor__main > .ck-editor__editable {
             height: 200px;
         }
